--- a/Nanjing_Scenic_Spot.html
+++ b/Nanjing_Scenic_Spot.html
@@ -1,103 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nanjing_Scenic_Spot</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f5f5f5;
-        }
-        .main-image {
-            position: relative;
-            background-size: cover;
-            height: 500px;
-        }
-        .main-image .overlay {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: rgba(0, 0, 0, 0.5);
-        }
-        .main-content {
-            padding: 60px 15px;
-            background-color: #fff;
-        }
-        .main-content h1 {
-            font-size: 36px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .main-content p {
-            font-size: 18px;
-            margin-bottom: 30px;
-        }
-        .btn-custom {
-            background-color: #DAA520;
-            color: #fff;
-            border-radius: 25px;
-            padding: 10px 30px;
-            font-size: 18px;
-        }
-        .bottom-section {
-            padding: 60px 15px;
-            background-color: #fff;
-            text-align: center;
-        }
-        .bottom-section img {
-            width: 100%;
-            max-width: 600px;
-            margin-bottom: 30px;
-        }
-        .bottom-section h2 {
-            font-size: 28px;
-            font-weight: bold;
-            margin-bottom: 20px;
-        }
-        .bottom-section p {
-            font-size: 16px;
-            margin-bottom: 30px;
-        }
-    </style>
+<meta charset="utf-8"/>
+<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/favicon.ico">
+<link rel="icon" type="image/png" href="./assets/img/favicon.ico">
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+<title>Nanjing_Scenic_Spot</title>
+<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no' name='viewport'/>
+<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700|Source+Sans+Pro:400,600,700" rel="stylesheet">
+<!-- Font Awesome Icons -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+      integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 <body>
 
-<div class="header">
-    <h1>孙中山总统府</h1>
-    <p>寻找城市宝藏历程</p>
+
+<!--------------------------------------
+HEADER
+--------------------------------------->
+<div class="container">
+	<div class="jumbotron jumbotron-fluid mb-3 pt-0 pb-0 bg-lightblue position-relative">
+		<div class="pl-4 pr-0 h-100 tofront">
+			<div class="row justify-content-between">
+				<div class="col-md-6 pt-6 pb-6 align-self-center">
+					<h1 class="secondfont mb-3 font-weight-bold">text here!text here!text here!text here!text here!text here!
+					text here!text here!text here!text here!</h1>
+					<p class="mb-3">
+
+						text here!text here!text here!text here!text here!text here!text here!text here!text here!
+						text here!text here!text here!text here!text here!text here!text here!text here!text here!
+						text here!text here!text here!text here!text here!text here!text here!text here!text here!
+						text here!text here!text here!text here!text here!text here!text here!text here!text here!
+
+					</p>
+					<a href="./article.html" class="btn btn-dark">Read More</a>
+				</div>
+                <div class="col-md-6 d-none d-md-block pr-0"
+                    style="background-size: cover; background-image: url('img/Nanjing Scenic Spot/IMG_0423 2.jpeg');">
+                </div>
+
+			</div>
+		</div>
+	</div>
+</div>
+<!-- End Header -->
+
+
+<!--------------------------------------
+MAIN
+--------------------------------------->
+<div class="container pt-4 pb-4">
+		<div class="row">
+			<div class="col-lg-6">
+			<div class="card border-0 mb-4 box-shadow h-xl-300">
+<!--				TODO 调整一下图片的大小-->
+                <div style="background-image: url('img/Nanjing Scenic Spot/IMG_0422 2.jpeg'); height: 100px; width: auto;
+                    background-size: cover;    background-repeat: no-repeat;"></div>
+				<div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
+					<h2 class="h4 font-weight-bold">
+					<a class="text-dark" href="https://en.wikipedia.org/wiki/Jiming_Temple">More stories about Jiming
+						temple</a>
+					</h2>
+					<p class="card-text">
+						text here!
+					</p>
+				</div>
+			</div>
+			<div class="col-lg-6">
+
+			</div>
+		</div>
+	</div>
 </div>
 
-<div class="main-image">
-    <div class="overlay">
-        <div class="container h-100 d-flex justify-content-center align-items-center">
-            <div class="text-center text-white">
-                <p>September 25, 2023</p>
-                <h2>走进正定兴隆寺</h2>
-                <button class="btn btn-light">了解更多</button>
-            </div>
-        </div>
-    </div>
-</div>
 
-<div class="main-content">
-    <div class="container">
-        <h1>京外名刹之首——正定兴隆寺</h1>
-        <p>中国十大名刹之一河北省正定兴隆寺位于正定县中山东路北侧，为国家AAAA级旅游景区...</p>
-        <button class="btn btn-custom">查看更多+</button>
-    </div>
-</div>
-
-<div class="bottom-section">
-    <div class="container">
-        <img src="your-image-url" alt="Temple Image">
-        <h2>景区展览</h2>
-        <p>用专业和热情谱写历史新篇章</p>
-    </div>
-</div>
 
 
 </body>
